# HCRMI

./: Cargo.toml  old_code.rs  test.csv  test.tar
img/: 1.avif  16bheif.avif  2.avif  2r.avif
img/compare_speed/: 1_10_1_63.0999.avif  1_10_2_12.119961.avif  1_10_3_2.651707.avif  1_10_4_2.0601788.avif  1_10_5_0.73805296.avif  1_10_7_0.5716238.avif  1_10_9_0.21176408.avif  1_5_1_58.320034.avif  1_5_2_11.140277.avif  1_5_2_17.18585.avif  1_5_3_2.5729773.avif  1_5_3_6.619377.avif  1_5_4_2.0784273.avif  1_5_4_5.1836514.avif  1_5_5_0.7092615.avif  1_5_6_1.6120316.avif  1_5_8_0.5701695.avif  1_5_8_1.0559202.avif  1_5_9_0.22028436.avif  1_5_9_0.4216303.avif
img/compare_speed2/: text0_10_2_12.305789.avif  text0_10_3_2.4920523.avif  text0_10_4_2.107484.avif  text0_10_6_0.7338605.avif  text0_10_7_0.57411873.avif  text0_10_9_0.23367298.avif  text0_15_2_13.072084.avif  text0_15_3_2.7001688.avif  text0_15_4_2.1100986.avif  text0_15_6_0.80210656.avif  text0_15_7_0.59241307.avif  text0_15_9_0.22607473.avif  text0_20_2_14.251444.avif  text0_20_3_2.770403.avif  text0_20_4_2.1996982.avif  text0_20_5_0.7682741.avif  text0_20_8_0.70022404.avif  text0_20_9_0.26234856.avif  (+42 more)
src/: benchmark.rs  codecs.rs  main.rs  test.rs
tmp/: IMG_20180331_221653.avif  IMG_20180331_230537.avif  IMG_20180331_230543.avif  IMG_20180331_230545.avif  IMG_20180401_164428.avif  IMG_20180401_164435.avif  IMG_20180402_133715.avif  IMG_20180402_153521.avif  IMG_20180403_081611.avif  IMG_20180403_084631.avif  IMG_20180403_085606.avif  IMG_20180403_095653.avif  IMG_20180403_123718.avif  IMG_20180403_182022.avif  IMG_20180410_133305.avif
